@startuml

title __ENTITIES's Class Diagram__\n

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace dinosaur.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.Dinosaur {
            - gender : String
            - isNewlyAdded : boolean
            - name : String
            - species : String
            - strength : int
            - weight : int
            + Dinosaur()
            + feedFood()
            + feedWater()
            + getDiet()
            + getFoodNeed()
            + getGender()
            + getName()
            + getSpecies()
            + getStrength()
            + getWaterNeed()
            + getWeight()
            + isNewlyAdded()
            + setNewlyAdded()
            - calculateStrength()
            - getConsiderationByDietType()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace dinosaur.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.DinosaurFactory {
            {static} + MIN_WEIGHT : int
            + DinosaurFactory()
            + create()
            + validateName()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace dinosaur.entities {
        interface ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.DinosaurRepository {
            {abstract} + findAll()
            {abstract} + findByName()
            {abstract} + getSortedDinosaursByStrengthThenName()
            {abstract} + remove()
            {abstract} + reset()
            {abstract} + save()
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.Dinosaur o-- ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.enums.DietType : diet
  ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.DinosaurFactory o-- ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.DinosaurRepository : dinosaurRepository
  ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.DinosaurFactory o-- ca.ulaval.glo4002.game.interfaces.rest.dinosaur.entities.enums.SpeciesDietsCorrespondances : speciesDietsCorrespondances


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
